--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
+    "mongoose": "^5.12.14",
     "next": "11.0.0",
+    "next-auth": "^3.27.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
