--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "11.0.0",
     "next-auth": "^3.27.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-jsx": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "7.29.0",
