--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next-auth": "^3.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-jsx": "^3.4.4"
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "eslint": "7.29.0",
