--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "colorthief": "^2.3.2",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
-    "next-auth": "^3.27.2",
+    "next-auth": "^3.27.3",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.35.1"
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
