--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "next-auth": "^3.27.3",
+    "next-pwa": "^5.2.23",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
