--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "sass": "^1.35.2"
   },
   "devDependencies": {
+    "@types/node": "^16.3.1",
+    "@types/react": "^17.0.14",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.5"
   }
 }
