--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,11 +12,45 @@
       "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/maskable_icon_x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "theme_color": "#FFFFFF",
   "background_color": "#333333",
   "start_url": "/",
+  "shortcuts": [
+    {
+      "name": "Top Songs",
+      "short_name": "Songs",
+      "description": "View your top songs",
+      "url": "/top-tracks",
+      "icons": [
+        {
+          "src": "/top-songs.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Top Artists",
+      "short_name": "Artists",
+      "description": "View your top artists",
+      "url": "/top-artists",
+      "icons": [
+        {
+          "src": "/top-artists.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
   "display": "standalone",
   "orientation": "portrait"
 }
