--- a/package.json
+++ b/package.json
@@ -8,23 +8,27 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "volta": {
+    "node": "14.18.2",
+    "yarn": "1.19.2"
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "colorthief": "^2.3.2",
-    "framer-motion": "^4.1.17",
-    "next": "12.0.0",
-    "next-auth": "^3.29.0",
-    "next-pwa": "^5.4.0",
+    "framer-motion": "^5.3.3",
+    "next": "12.0.7",
+    "next-auth": "^4.0.2",
+    "next-pwa": "^5.4.4",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.3"
+    "sass": "^1.44.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
-    "eslint": "8.1.0",
-    "eslint-config-next": "12.0.0",
-    "typescript": "^4.4.4"
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.5.2"
   }
 }
