--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "next": "12.0.7",
     "next-auth": "^4.0.2",
     "next-pwa": "^5.4.4",
-    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.44.0",
+    "sharp": "^0.29.3",
     "swr": "^1.1.0",
     "teaful": "^0.9.2"
   },
