--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,13 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": "./src",
     "paths": {
-      "@/*": [
-        "*"
-      ],
-      "@/api/*": [
-        "pages/api/*"
-      ]
+      "@/*": ["*"],
+      "@/api/*": ["pages/api/*"]
     },
+    "types": ["@peeky/test"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -35,7 +28,5 @@
     "src/pages/auth/signin/index.tsx",
     "src/pages/_document.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
