--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest src",
+    "test:watch": "npm run test -- --watch"
   },
   "volta": {
     "node": "14.18.2",
@@ -27,10 +29,14 @@
     "teaful": "^0.9.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
     "@types/node": "^17.0.1",
     "@types/react": "^17.0.37",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
 }
