--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.0.10",
     "next-auth": "^4.2.1",
     "next-pwa": "^5.4.4",
+    "preact": "^10.6.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.7",
