--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prepare": "husky install"
   },
   "volta": {
-    "node": "14.18.2",
-    "yarn": "1.19.2"
+    "node": "16.16.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -21,6 +20,7 @@
     "framer-motion": "^6.3.16",
     "next": "12.2.0",
     "next-auth": "^4.8.0",
+    "quantize": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.53.0",
